# r2d2

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp32_p4_wifi6_touch_lcd_4_3/: esp32_p4_wifi6_touch_lcd_4_3.c
components/esp32_p4_wifi6_touch_lcd_4_3/include/bsp/: esp32_p4_wifi6_touch_lcd_4_3.h
main/: CMakeLists.txt  idf_component.yml  main.c  r2d2_audio.c  r2d2_audio.h  r2d2_buttons.c  r2d2_buttons.h  r2d2_display.c  r2d2_display.h  r2d2_modes.c  r2d2_modes.h  r2d2_webserver.c  r2d2_webserver.h  r2d2_wifi.c  r2d2_wifi.h
